# ezavmixer

./: .gitmodules  README.md
src/android/jni/: onyxjni.cpp
src/apps/ezavmixer/: AndroidManifest.xml
src/apps/ezavmixer/jni/: Android.mk  PlayerBase.h  PlayerEventBase.h  RtspMultiPlayer.cpp  ServerNode.cpp  ServerNode.h  jOnyxPlayerApi.cpp  jOnyxPlayerEvents.cpp
src/apps/ezscreencast/: .cproject  .project  AndroidManifest.xml
src/apps/ezscreencast/jni/: Android.mk  Application.mk  DashMultiPublishClnt.cpp  DashMultiPublishClnt.h  MultiPublishClnt.cpp  MultiPublishClnt.h  PublishClntBase.cpp  PublishClntBase.h  PublishEventBase.h  RtspMultiPublishClnt.cpp  RtspMultiPublishClnt.h  ServerNode.cpp  ServerNode.h  jDeviceConfigure.cpp  jOnyxApi.cpp  jOnyxApiHandler.cpp  jOnyxApiHandler.h  jOnyxEvents.cpp  jOnyxEvents.h
src/apps/rtspplayer/: .project  AndroidManifest.xml
src/apps/rtspplayer/jni/: Android.mk  Application.mk  PlayerBase.cpp  PlayerBase.h  RtspMultiPlayer.cpp  RtspMultiPlayer.h  RtspPlayer.cpp  RtspPlayer.h  ServerNode.cpp  ServerNode.h  ServerNodeBase.h  ServerNodeRtsp.cpp  ServerNodeRtsp.h  frameBuffer.cpp  frameBuffer.h  jOnyxPlayerApi.cpp  jOnyxPlayerEvents.cpp  jOnyxPlayerEvents.h
src/apps/udpplayer/: .project  AndroidManifest.xml  build.gradle  udpplayer.jks
src/apps/udpplayer/jni/: Android.mk  CMakeLists.txt  PlayerBase.h  PlayerEventBase.h  ServerNodeBase.cpp  ServerNodeUdp.cpp  ServerNodeUdp.h  UdpMultiPlayer.cpp  UdpMultiPlayer.h  jAudDecApi.cpp  jUdpPlayerApi.cpp  jUdpPlayerEvents.cpp  jUdpPlayerEvents.h
src/core/: .cproject  .project
src/core/codecdm81xx/: app_properties.mk  makefile
src/core/codecdm81xx/docs/: onyx_core.docx
src/core/codecdm81xx/include/: onyx_omxext_api.h  strmconn.h
src/core/codecdm81xx/src/: Makefile.test  aac_dec_chain.c  aac_dec_chain.h  acap_ilclient.c  acap_omx_chain.h  adec_ilclient.c  adec_ilclient.h  adec_ilclient_utils.c  adec_ilclient_utils.h  adec_omx_chain.h  adec_parser.c  aenc_fakeenc.c  aenc_ilclient.c  aenc_ilclient_utils.c  aenc_ilclient_utils.h  aenc_omx_chain.h  aud_src_alsa.c  aud_src_alsa.h  audio_mixer.c  audio_mixer.h  cap_main.c  cap_main.h  dbglog.c  dbglog.h  dec_clock.c  dec_clock.h  dec_filesrc.c  dec_filesrc.h  dec_main.c  dec_main.h  dec_omx_chains_common.h  dec_xport.c  g711_dec_chain.c  g711_dec_chain.h  ilclient_common.c  ilclient_common.h  layout.h  oal.c  oal.h  omxal.c  (+22 more)
src/core/include/: AvMixer.h  ConfigBase.h  HlsClntBridge.h  HlsSrvBridge.h  InprocStrmConn.h  MediaSwitch.h  MpdSrvBridge.h  OmxIf.h  RtpSrvBridge.h  RtspCallback.h  RtspClntBridge.h  RtspConfigure.h  RtspPublishBridge.h  StreamUtil.h  StrmConnWrapper.h  StrmInBase.h  StrmInBridgeBase.h  StrmOutBridgeBase.h  UdpCallback.h  UdpClntBridge.h  uimsg.h
src/core/jni/: Android.mk  CMakeLists.txt
src/core/src/: AvMixer.cpp  HlsSrvBridge.cpp  InprocStrmConn.cpp  InputStrmBase.cpp  MediaSwitch.cpp  MpdSrvBridge.cpp  OmxIf.cpp  RtpSrvBridge.cpp  RtspClntBridge.cpp  RtspConfigure.cpp  RtspPublishBridge.cpp  StreamUtil.cpp  StrmConnWrapper.cpp  StrmInBridgeBase.cpp  StrmOutBridgeBase.cpp  UdpClntBridge.cpp  onyx_mw_main.cpp
src/gui/android/jni/: Android.mk
src/gui/qt_linux/: .project  Makefile.build  Onvif.c  Onvif.h  activeserverlist.cpp  activeserverlist.h  activeserverlist.ui  advertisement.cpp  advertisement.h  advertisement.ui  buttonfactory.cpp  buttonfactory.h  buttonlaunch.cpp  buttonlaunch.h  customstyle.cpp  customstyle.h  hlspublish.cpp  hlspublish.h  hlspublish.ui  hlsserver.cpp  hlsserver.h  hlsserver.ui  main.cpp  mainwindow.cpp  mainwindow.h  menupage.cpp  menupage.h  onyx_gui.pro  onyxcontrol.cpp  onyxcontrol.h  osdmanager.cpp  osdmanager.h  readme.txt  rtmppublish.cpp  rtmppublish.h  rtmppublish.ui  rtsppublish.cpp  rtsppublish.h  rtsppublish.ui  rtspserver.cpp  (+11 more)
src/gui/qt_linux/html/: cameras.html  layout_settings.html  matrix.css  menu_main.html  menu_settings.html  menu_status.html  publishing.html
src/gui/qt_linux/keyboard/: keyboard.cpp  keyboard.ui  ui_keyboard.h
src/gui/qt_linux/scripts/: startOnyx  stopOnyx
src/logutil/include/: JdDbg.h
src/onyx_gui/android/: AndroidManifest.xml
src/onyx_libs/admanager/: admanager.cpp
src/onyx_libs/httplive/include/: HlsPublishBase.h  JdHttpLiveSgmt.h
src/onyx_libs/jdaws/include/: MpdOutJdAws.h
src/onyx_mw/: onyx_mw.pro
src/onyx_mw/include/: RtspClntBridge.h  StrmOutBridgeBase.h  UdpSrvBridge.h  onyx_mw_util.h  sock_ipc.h  strmconn_zmq.h  uimsg.h
src/onyx_mw/jni/: Android.mk
src/onyx_mw/src/: OmxIf.cpp  RtmpPublishBridge.cpp  UdpSrvBridge.cpp  onyx_mw_main.cpp  onyx_mw_util.cpp
src/onyxcore/: HlsClntBridge.cpp  HlsClntBridge.h  HlsSrvBridge.cpp  HlsSrvBridge.h  JdDbg.h  JdOsal.h  JdUdp.h  MediaSwitch.cpp  MediaSwitch.h  MpdSrvBridge.cpp  MpdSrvBridge.h  OmxIf.cpp  OmxIf.h  RtmpPublishBridge.cpp  RtmpPublishBridge.h  RtpSrvBridge.cpp  RtpSrvBridge.h  RtspClntBridge.cpp  RtspClntBridge.h  RtspPublishBridge.cpp  RtspPublishBridge.h  StrmInBridgeBase.cpp  StrmInBridgeBase.h  StrmOutBridgeBase.cpp  StrmOutBridgeBase.h  TsDemuxIf.h  UdpSrvBridge.cpp  UdpSrvBridge.h  minini.c  minini.h  onyx.conf_template  onyx_mw_main.cpp  onyx_mw_util.cpp  onyx_mw_util.h  onyxcore.cpp  sock_ipc.cpp  sock_ipc.h  strmconn.h  strmconn_zmq.c  udprdr.c  (+2 more)
src/onyxcore/OpenMAXAL/: OpenMAXAL.h  OpenMAXAL_IID.c  OpenMAXAL_Platform.h
src/onyxcore/jni/: Android.mk
src/onyxcore/tsdemux/: AdtsParse.h  TsDemux.cpp  TsDemuxIf.h  TsPsi.cpp  TsPsi.h  TsPsiIf.h  ts_dbg.h  tsfilter.cpp  tsfilter.h
src/onyxcore/tsmux/: SimpleTsMux.cpp  SimpleTsMux.h
src/osal/include/: JdOsal.h
src/osal/jni/: Android.mk
src/plugins/: .cproject  .project
src/plugins/admanager/: admanager.h
src/plugins/auddec/jni/: Android.mk  CMakeLists.txt
src/plugins/httplive/: JdHttpLiveSgmt.cpp
src/plugins/jdudp/jni/: Android.mk  CMakeLists.txt
src/plugins/jdwebsocket/jni/: CMakeLists.txt
src/testapps/: .cproject  .project
src/testapps/rtsppublish/: TestRtspPublish.cpp
src/testapps/testudpclient/: Makefile  main.cpp
src/testapps/testudpstreamer/: Makefile  main.cpp
(+374 files in other folders)
